#12 - Did not find the root of the problem, so I implemented a fix inside the component, hope to not have this kind of problem again - Fixed padding in mobile breakpoint that was overlap by lowRes breakpoint padding

--- a/src/components/pages/projects/ProjectCard.module.css
+++ b/src/components/pages/projects/ProjectCard.module.css
@@ -7,6 +7,10 @@
     padding-bottom: 28px;
 }
 
+:global(.lowRes) .cardWrapper {
+    width: 90vw;
+}
+
 .imageSkillsContainer {
     width: 100%;
     overflow: hidden;
